[package]
name = "iso-3166"
version = "0.1.0"
authors = ["Philippe Guilbault <philippe.guilbault@gmail.com>"]
edition = "2018"
keywords = [
    "geonames", "iso", "iso-3166", "3166", "iso-3166-1", "iso-3166-2", "iso-3166-3", "3166-1", "3166-2", "3166-3",
    "country", "subdivision", "subregion", "state", "province", "region"
]
build = "build.rs"
default-run = "iso-test"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = 'abort'

[dependencies]
strum = "0.18"
strum_macros = "0.18"

# Country & Language Info
grep-searcher = { version = "0.1", optional = true }
grep-regex = { version = "0.1", optional = true }

# Binary
structopt = { version = "0.3", optional = true }
grep-matcher = { version = "0.1", optional = true }
surf = { version = "1.0", optional = true }
async-std = { version = "1.5", optional = true }

[features]
default = []
grep = ["grep-searcher", "grep-regex"]

country-info = ["grep"]
country-embed-db = ["country-info"]

language-info = ["grep"]
language-embed-db = ["language-info"]

downloader = ["structopt", "surf", "async-std"]

[[bin]]
name = "iso-test"
path = "src/bin/iso-test.rs"

[[bin]]
name = "iso-3166"
path = "src/bin/iso-3166.rs"
required-features = ["structopt"]

[[bin]]
name = "update-enums"
path = "src/bin/update-enums.rs"
required-features = ["structopt", "grep-matcher"]

[[bin]]
name = "download-files"
path = "src/bin/download-files.rs"
required-features = ["downloader"]
