[package]
name = "iso-3166"
version = "0.1.0"
authors = ["Philippe Guilbault <philippe.guilbault@gmail.com>"]
edition = "2018"

[dependencies]
strum = "0.18"
strum_macros = "0.18"

attohttpc = { version = "0.15", optional = true }
scraper = { version = "0.12", optional = true }
chrono = { version = "0.4", optional = true }

grep-searcher = { version = "0.1", optional = true }
grep-regex = { version = "0.1", optional = true }
grep-matcher = { version = "0.1", optional = true }

[features]
default = []

updater = ["attohttpc", "scraper", "chrono"]

[[bin]]
name = "wiki-crawler"
path = "src/bin/wiki-crawler.rs"
required-features = ["updater"]
